fixed chromedriver error

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,11 +18,11 @@
       <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
     </div>
 
-
-    <img src="{{ vacation.sloth_img }}" alt="Sloth">
-    <h2>The typical weather in Costa Rica is:</h2>
-    <h3>Max Temp: {{ vacation.max_temp }}</h3>
-    <h3>Min Temp: {{ vacation.min_temp }}</h3>
+    <h3> The Latest Mars News: </h3>
+    <p class="news"> {{mars.news_title}}</p>
+    <p class="news"> {{mars.news_p}}</p>
+    <br>
+    <br>
   </div>
 </body>
 
