finalized new page scrape

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,10 @@
     <p class="news"> {{mars.news_p}}</p>
     <br>
     <br>
+    <h3 class="weather"> Current Weather on Mars: </h3>
+    <p class="weather"> {{mars.weather}}</p>
+    <br>
+    <br>
   </div>
 </body>
 
