finalized new page scrape

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,11 +20,11 @@
 
     <h3> The Latest Mars News: </h3>
     <p class="news"> {{mars.news_title}}</p>
-    <p class="news"> {{mars.news_p}}</p>
+    <p class="news"> {{mars.news_paragraph}}</p>
     <br>
     <br>
     <h3 class="weather"> Current Weather on Mars: </h3>
-    <p class="weather"> {{mars.weather}}</p>
+    <p class="weather"> {{mars.mars_weather}}</p>
     <br>
     <br>
   </div>
