finalized weather scrape and working on image scrape

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,13 @@
     <p class="weather"> {{mars.mars_weather}}</p>
     <br>
     <br>
+    <h3 class="table"> Mars Facts:</h3>
+    <section> {{ mars table here  }} </section>
+    <br>
+    <br>
+    <h3 class="image"> Featured Mars Image </h3>
+    <img src="{{mars.mars_image}}" alt="Image of Planet Mars">
+    <br>
   </div>
 </body>
 
