working on image scrape

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,11 +28,10 @@
     <br>
     <br>
     <h3 class="table"> Mars Facts:</h3>
-    <section> {{ mars table here  }} </section>
+    <!-- <section> {{ mars.mars_table }} </section> -->
     <br>
     <br>
     <h3 class="image"> Featured Mars Image </h3>
-    <img src="{{mars.mars_image}}" alt="Image of Planet Mars">
     <br>
   </div>
 </body>
