fixed page load and table grab

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <h3> The Latest Mars News: </h3>
-    <p class="news"> {{mars.news_title}}</p>
+    <p class="news"> <bold>{{mars.news_title}}</bold></p>
     <p class="news"> {{mars.news_paragraph}}</p>
     <br>
     <br>
@@ -32,6 +32,7 @@
     <br>
     <br>
     <h3 class="image"> Featured Mars Image </h3>
+    <img src = "{{ mars.mars_image}}" alt="Mars Image">
     <br>
   </div>
 </body>
