--- a/style.css
+++ b/style.css
@@ -1,16 +1,11 @@
 /* style sheet for mars project */
 
-.header {
-    background-color: #F1F1F1;
-    text-align: center;
-    padding: 20px;
-    font-size: larger;
-  }
-
 .navbar {
     background-color: lightblue;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-style: italic;
+    padding-bottom: 40px;
+    margin: 20px;
 }
 
 .btn {
@@ -19,10 +14,6 @@
 }
 
 img {
-    width: 100%;
+    width: 70%;
     height: auto;
   }
-
-.groove {
-    border-style: groove;
-}
